# meetcap

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: setup.sh
src/meetcap/: __init__.py  actions.py  cli.py  config.py  menubar.py  processor.py  recorder.py  server.py  summarizer.py  transcriber.py  watcher.py
src/meetcap/templates/: actions.html  base.html  index.html  recording.html  search.html
